--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 <br/>
 <a>公众号后续会补充一些生活中的小碎片！！感兴趣的可以点点召唤哇！！谢谢大噶！！</a>
 <div align="left"><img src="2.gif"align="center"width="100"height="100"/></div><br/>
-
+<br/><br/><br/>
+<div>友情链接</div>
+<div><a href="https://wangjunyu2001.github.io/">咕哒子的个人网页</div>
 </body>
 
 </html>
