--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
   <title>热可可X的杂货铺</title>
   <meta charset=utf-8>
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?d25b2683e62f9b61fdfc1591d0f5e171";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </head>
 
 <body>
